--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <div id="score">0</div>
     <canvas id="map" height="640" width="320"></canvas>
 </body>
-<script src="./core.js"></script>
+<script src="tetrisGameLogic.js"></script>
 </html>
