--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div>Score: </div>
-    <div id="score">0</div>
+    <div id="score">Score: 0</div>
     <canvas id="map" height="640" width="320"></canvas>
 </body>
 <script src="tetrisGameLogic.js"></script>
