--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="menu" class="screen">
         <h1>TETRIS</h1>
-        <button id="startBtn" onclick="newGame()">Start Game</button>
+        <button id="startBtn" onclick="newGame()">Restart Game</button>
     </div>
     <div id="game" class="screen">
         <p id="score">Score: 0</p>
