WIP Audio and Menu

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="menu" class="screen">
         <h1>TETRIS</h1>
-        <button id="startBtn" onclick="newGame()">Restart Game</button>
+        <button id="new-game-button">Restart Game</button>
     </div>
     <div id="game" class="screen">
         <p id="score">Score: 0</p>
@@ -16,4 +16,5 @@
     </div>
 </body>
 <script src="tetrisGameLogic.js"></script>
+<script src="tetrisGameAudio.js"></script>
 </html>
