--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 <body>
     <div id="menu" class="screen">
         <h1>TETRIS</h1>
-        <button id="new-game-button">Restart Game</button>
+        <button id="resume-button">Resume</button>
+        <button id="new-game-button">New Game</button>
+        <button id="difficulty-button">Difficulty</button>
+        <button id="leaderboards-button">Leaderboards</button>
+    </div>
+    <div id="difficulty-menu" class="screen">
+        <h1>DIFFICULTY</h1>
+        <button id="easy-button" class="diff-btn">Easy</button>
+        <button id="medium-button" class="diff-btn">Medium</button>
+        <button id="hard-button" class="diff-btn">Hard</button>
+        <button id="back-button" class="diff-btn">Back</button>
     </div>
     <div id="game" class="screen">
         <p id="score">Score: 0</p>
