--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div id="menu" class="screen">
+    <div class ="ui">
+        <h1>Hello</h1>
+    </div>
+    <div id="menu" class="tab">
         <h1>TETRIS</h1>
         <button id="resume-button">Resume</button>
         <button id="new-game-button">New Game</button>
         <button id="difficulty-button">Difficulty</button>
         <button id="leaderboards-button">Leaderboards</button>
     </div>
-    <div id="difficulty-menu" class="screen">
+    <div id="difficulty-menu" class="tab">
         <h1>DIFFICULTY</h1>
         <button id="easy-button" class="diff-btn">Easy</button>
         <button id="medium-button" class="diff-btn">Medium</button>
         <button id="hard-button" class="diff-btn">Hard</button>
         <button id="back-button" class="diff-btn">Back</button>
     </div>
-    <div id="game" class="screen">
+    <div id="game" class="tab">
         <p id="score">Score: 0</p>
         <canvas id="map" height="640" width="320"></canvas>
     </div>
