Major Update WIP
Menu is almost ready, difficulty in UI

--- a/index.html
+++ b/index.html
@@ -7,25 +7,36 @@
 </head>
 <body>
     <div class ="ui">
-        <h1>Hello</h1>
+        <h3>Username: </h3>
+        <h4 id="difficulty-ui-text">Difficulty: MEDIUM</h4>
     </div>
-    <div id="menu" class="tab">
+    <div id="main-menu" class="tab">
         <h1>TETRIS</h1>
-        <button id="resume-button">Resume</button>
+        <h4 id="previous-score">Previous score: NONE</h4>
         <button id="new-game-button">New Game</button>
         <button id="difficulty-button">Difficulty</button>
         <button id="leaderboards-button">Leaderboards</button>
+    </div>
+    <div id="pause-menu" class="tab">
+        <h1>TETRIS</h1>
+        <button id="pause-resume-button">Resume</button>
+        <button id="pause-quit-button">Quit</button>
     </div>
     <div id="difficulty-menu" class="tab">
         <h1>DIFFICULTY</h1>
         <button id="easy-button" class="diff-btn">Easy</button>
         <button id="medium-button" class="diff-btn">Medium</button>
         <button id="hard-button" class="diff-btn">Hard</button>
-        <button id="back-button" class="diff-btn">Back</button>
+        <button id="difficulty-back-button" class="diff-btn">Back</button>
     </div>
     <div id="game" class="tab">
         <p id="score">Score: 0</p>
         <canvas id="map" height="640" width="320"></canvas>
+    </div>
+    <div id="leaderboards-menu" class="tab">
+        <h1>LEADERBOARDS</h1>
+        <p>Sorry, this page is still under construction.</p>
+        <button id="leaderboards-back-button">Back</button>
     </div>
 </body>
 <script src="tetrisGameLogic.js"></script>
