--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     <div class ="ui">
-        <h3>Username: </h3>
-        <h4 id="difficulty-ui-text">Difficulty: MEDIUM</h4>
+        <h4>Username: USER</h4>
+        <h4 id="ui-difficulty">Difficulty: MEDIUM</h4>
+        <div class="volume-control">
+            <label for="volume-range">Volume:</label>
+            <input type="range" id="volume-range" min="0" max="1" step="0.01" value="0.5">
+            <button id="music-pause-button">▶️</button>
+        </div>
     </div>
     <div id="main-menu" class="tab">
         <h1>TETRIS</h1>
