--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class ="ui">
-        <h4>Username: USER</h4>
+        <h4>Username: Guest</h4>
         <h4 id="ui-difficulty">Difficulty: MEDIUM</h4>
         <div class="volume-control">
             <label for="volume-range">Volume:</label>
