--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <button id="leaderboards-back-button">Back</button>
     </div>
 </body>
+<script src="tetrisMenu.js"></script>
 <script src="tetrisGameLogic.js"></script>
 <script src="tetrisGameAudio.js"></script>
 </html>
