--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <canvas id="map" height="640" width="320"></canvas>
         <div id="next-container">
             <div id="next-label">Next piece</div>
-            <canvas id="next-piece" height="128" width="128"></canvas>
+            <canvas id="next-piece" height="128px" width="128px"></canvas>
         </div>
     </div>
     <div id="leaderboards-menu" class="tab">
