--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         </div>
     </div>
     <div id="main-menu" class="tab">
-        <h1>TETRIS</h1>
+        <h1>TETRIS+</h1>
         <h4 id="previous-score">Previous score: NONE</h4>
         <button id="new-game-button">New Game</button>
         <button id="difficulty-button">Difficulty</button>
         <button id="leaderboards-button">Leaderboards</button>
     </div>
     <div id="pause-menu" class="tab">
-        <h1>TETRIS</h1>
+        <h1>TETRIS+</h1>
         <button id="pause-resume-button">Resume</button>
         <button id="pause-quit-button">Quit</button>
     </div>
