--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         </div>
     </div>
     <div id="main-menu" class="tab">
-        <h1>TETRIS+</h1>
-        <h4 id="previous-score">Previous score: NONE</h4>
+        <img src="./res/tetris-plus-logo.png" alt="main logo" style="width: 35%">
+        <h4 id="previous-score" style="margin: 2% 0 1% 0">Previous score: NONE</h4>
         <button id="new-game-button">New Game</button>
         <button id="difficulty-button">Difficulty</button>
         <button id="leaderboards-button">Leaderboards</button>
     </div>
     <div id="pause-menu" class="tab">
-        <h1>TETRIS+</h1>
+        <img src="./res/tetris-plus-logo.png" alt="main logo" style="width: 35%; margin-bottom: 2%">
         <button id="pause-resume-button">Resume</button>
         <button id="pause-quit-button">Quit</button>
     </div>
@@ -35,7 +35,7 @@
         <button id="difficulty-back-button" class="diff-btn">Back</button>
     </div>
     <div id="game" class="tab">
-        <p id="score">Score: 0</p>
+        <p id="score" style="margin-bottom: 5%">Score: 0</p>
         <canvas id="map" height="640" width="320"></canvas>
         <div id="next-container">
             <div id="next-label">Next piece</div>
