--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Tetris</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./res/">
 </head>
 <body>
     <div class ="ui">
