Final Pre-Release bugfix
Added favico to HTML
Fixed disappearing rows and glitching pieces during animation.
Silent muted some async functions.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Tetris</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./res/">
+    <link rel="icon" type="image/x-icon" href="./res/favicon.ico">
 </head>
 <body>
     <div class ="ui">
