WIP experimenting with PHP
Trying to connect PHP to MySQL server to make a working user login.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div id="login-menu" class="tab menu">
         <h1>LOGIN</h1>
 
-        <form>
+        <form method="post" action="login.php">
 
             <div>
                 <label for="login-username">Username</label>
@@ -91,7 +91,7 @@
     <div id="register-menu" class="tab menu">
         <h1>REGISTER</h1>
 
-        <form>
+        <form method="post" action="register.php">
 
             <div>
                 <label for="register-username">Username</label>
