--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <h4>Username: Guest</h4>
-        <button id="ui-login-button">Login</button>
+        <a id="ui-login-button">Login</a>
 
     </div>
 
@@ -109,19 +109,16 @@
             </div>
 
             <p id="register-to-login">I already have an account</p>
-
+            <button id="register-button">Register</button>
         </form>
 
-        <button id="register-button">Register</button>
         <button class="back-button">Back</button>
 
     </div>
 
 </body>
-
 <script src="tetrisMenu.js"></script>
 <script src="tetrisGamePiece.js"></script>
 <script src="tetrisGameLogic.js"></script>
 <script src="tetrisGameAudio.js"></script>
-
 </html>
