WIP User login Frontend
Trying to make user login results appear in the UI.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button id="music-pause-button">▶️</button>
         </div>
 
-        <h4>Username: Guest</h4>
+        <h4 id="ui-username">Username: Guest</h4>
         <button id="ui-login-button">Login</button>
 
     </div>
