--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
     <title>Tetris</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
 </head>
@@ -33,7 +34,7 @@
         <h4 id="previous-score" style="margin: 2% 0 1% 0">Previous score: NONE</h4>
         <button id="new-game-button">New Game</button>
         <button id="difficulty-button">Difficulty</button>
-        <button id="leaderboards-button">Leaderboards</button>
+        <button id="leaderboard-button">Leaderboard</button>
     </div>
 
     <div id="pause-menu" class="tab menu">
@@ -60,12 +61,12 @@
         </div>
     </div>
 
-    <div id="leaderboards-menu" class="tab menu">
-        <h1>LEADERBOARDS</h1>
+    <div id="leaderboard-menu" class="tab menu">
+        <h1>LEADERBOARD</h1>
 
         <p>Under maintenance.</p>
 
-        <button class="back-button leaderboards-elem">Back</button>
+        <button class="back-button leaderboard-elem">Back</button>
     </div>
 
     <div id="login-menu" class="tab menu">
